# agent-quarantine

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml
assets/demo/: agent-quarantine-demo.en.srt
crates/agent-quarantine-cli/: Cargo.toml
crates/agent-quarantine-cli/src/: cli.rs  main.rs
crates/agent-quarantine-cli/src/commands/: completions.rs  mod.rs  policy.rs  preflight.rs  report.rs  run.rs  shim.rs
crates/agent-quarantine-cli/tests/: cli.rs
crates/agent-quarantine-core/: Cargo.toml
crates/agent-quarantine-core/src/: error.rs  lib.rs
crates/agent-quarantine-core/src/audit/: event.rs  logger.rs  mod.rs  redact.rs
crates/agent-quarantine-core/src/command/: classify.rs  executable.rs  mod.rs  normalize.rs
crates/agent-quarantine-core/src/policy/: config.rs  decision.rs  engine.rs  mod.rs  rules.rs
crates/agent-quarantine-core/src/preflight/: file_kinds.rs  findings.rs  mod.rs  scanner.rs
crates/agent-quarantine-core/src/report/: markdown.rs  mod.rs
docs/: architecture.md  codex-instructions.md  limitations.md  policy.md  threat-model.md
examples/safe-risky-repo/: AGENTS.md  README.md  package.json
