[workspace]
resolver = "2"
members = ["crates/agent-quarantine-core", "crates/agent-quarantine-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
repository = "https://github.com/spacegiyou/agent-quarantine"
authors = ["Agent Quarantine contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "=4.5.67"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
once_cell = "1"
sha2 = "0.10"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
