[package]
name = "agent-quarantine-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Agent Quarantine, a local command firewall and safety layer for AI coding agents."

[[bin]]
name = "agent-quarantine"
path = "src/main.rs"

[dependencies]
agent-quarantine-core = { path = "../agent-quarantine-core" }
clap.workspace = true
clap_complete.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
uuid.workspace = true
tempfile.workspace = true
chrono.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
