[package]
name = "agent-quarantine-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core policy engine, command classification, audit log, preflight scanner, and report logic for Agent Quarantine."

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
chrono.workspace = true
regex.workspace = true
once_cell.workspace = true

[dev-dependencies]
tempfile.workspace = true
